# lpvibe-mcp

./: .gitignore  Dockerfile
.claude/skills/lpvibe/: SKILL.md
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/versions/: 0001_initial_schema.py
api/app/: auth.py  config.py  main.py  models.py  schemas.py
api/app/routers/: health.py  projects.py
api/app/services/: audit.py  coolify.py  github.py  minio_admin.py  postgres_admin.py
api/lpvibe_platform_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/tests/: conftest.py  test_auth.py  test_health.py  test_projects.py
api/tests/test_services/: test_coolify.py  test_github.py  test_minio_admin.py  test_postgres_admin.py
docs/: 2026-04-14-plan-a-vps-infrastructure.md  2026-04-14-platform-design.md  internal_replit_platform_architecture.md  internal_replit_platform_implementation_plan.md  platform_spec.md  templates_reference.md
docs/superpowers/plans/: 2026-04-14-platform-api.md
mcp/: Dockerfile  pyproject.toml
mcp/app/: browser_client.py  config.py  main.py  platform_client.py
